Adding ad interstitial to sign up/hamburger button and adding ad banner to main activity/above tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,5 +371,6 @@
     <string name="create_account">Creating Account...</string>
     <string name="welcome">Welcome</string>
     <string name="validate_name">Enter valid name</string>
+    <string name="sigining_in">Signing In</string>
 
 </resources>
